fix overflow in post

--- a/src/features/dps/molecules/dps-card/style.module.less
+++ b/src/features/dps/molecules/dps-card/style.module.less
@@ -9,3 +9,7 @@
 .replies {
   margin-left: 5px;
 }
+
+.card {
+  overflow: auto;
+}
